Changed workflow to trigger only for main.tex pushes. Also included index.html file

--- a/.github/workflows/converter.yml
+++ b/.github/workflows/converter.yml
@@ -2,7 +2,9 @@ name: Release Compiled PDF
 on:
   push:
     branches:
-      - main 
+      - main
+    paths:
+      - 'main.tex'
 
 jobs:
   build_latex:
