--- a/.github/workflows/DevOps_Converter.yml
+++ b/.github/workflows/DevOps_Converter.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - 'main.tex'
+      - '**.tex'
 
 jobs:
   build_latex:
@@ -16,7 +16,7 @@ jobs:
       - name: Compile LaTex document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: main.tex
+          root_file: DevOps.tex
 
       - name: Configure Git
         run: |
@@ -25,7 +25,7 @@ jobs:
 
       - name: Commit and Push PDF
         run: |
-          git add main.pdf
+          git add DevOps.pdf
           git commit -m "Compiled PDF on $(date -d "$M" '+%m')/$(date -d "$D" '+%d')/$(date -d "$Y" '+%Y') - $(date +%s)"
           git push
         env:
