--- a/.github/workflows/AI_Converter.yml
+++ b/.github/workflows/AI_Converter.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - 'AI.tex'
+      - 'AI/AI.tex'
 
 jobs:
   build_latex:
@@ -16,17 +16,27 @@ jobs:
       - name: Compile LaTex document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: AI.tex
+          root_file: AI/AI.tex
 
       - name: Configure Git
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+      
+
+      - name: Rename file
+        run: |
+          mv AI/AI.pdf AI/Amogh_Tambad_Resume.pdf
+
+      - name: Checkout main branch explicitly
+        run: |
+          git checkout main
 
       - name: Commit and Push PDF
         run: |
           git pull
-          git add AI.pdf
+          git add AI/Amogh_Tambad_Resume.pdf
+          git diff --quiet && echo "No changes to commit" && exit 0
           git commit -m "Compiled PDF on $(date -d "$M" '+%m')/$(date -d "$D" '+%d')/$(date -d "$Y" '+%Y') - $(date +%s)"
           git push
         env:
