--- a/.github/workflows/DevOps_Converter.yml
+++ b/.github/workflows/DevOps_Converter.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - 'DevOps.tex'
+      - 'DevOps/DevOps.tex'
 
 jobs:
   build_latex:
@@ -16,17 +16,26 @@ jobs:
       - name: Compile LaTex document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: DevOps.tex
+          root_file: DevOps/DevOps.tex
 
       - name: Configure Git
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
+      - name: Rename file
+        run: |
+          mv DevOps/DevOps.pdf DevOps/Amogh_Tambad_Resume.pdf
+      
+      - name: Checkout main branch explicitly
+        run: |
+          git checkout main
+
       - name: Commit and Push PDF
         run: |
           git pull
-          git add DevOps.pdf
+          git add DevOps/Amogh_Tambad_Resume.pdf
+          git diff --quiet && echo "No changes to commit" && exit 0
           git commit -m "Compiled PDF on $(date -d "$M" '+%m')/$(date -d "$D" '+%d')/$(date -d "$Y" '+%Y') - $(date +%s)"
           git push
         env:
