--- a/.github/workflows/DevOps_Converter.yml
+++ b/.github/workflows/DevOps_Converter.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: DevOps
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
@@ -25,7 +28,7 @@ jobs:
 
       - name: Rename file
         run: |
-          mv DevOps/DevOps.pdf DevOps/Amogh_Tambad_Resume.pdf
+          mv DevOps.pdf Amogh_Tambad_Resume.pdf
       
       - name: Checkout main branch explicitly
         run: |
@@ -34,7 +37,7 @@ jobs:
       - name: Commit and Push PDF
         run: |
           git pull
-          git add DevOps/Amogh_Tambad_Resume.pdf
+          git add Amogh_Tambad_Resume.pdf
           git diff --quiet && echo "No changes to commit" && exit 0
           git commit -m "Compiled PDF on $(date -d "$M" '+%m')/$(date -d "$D" '+%d')/$(date -d "$Y" '+%Y') - $(date +%s)"
           git push
