--- a/.github/workflows/DevOps_Converter.yml
+++ b/.github/workflows/DevOps_Converter.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Compile LaTex document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: DevOps.tex
+          root_file: DevOps/DevOps.tex
 
       - name: Configure Git
         run: |
@@ -29,7 +29,11 @@ jobs:
       - name: Checkout main branch explicitly
         run: |
           git checkout main
-
+      
+      - name: Rename file
+        run: |
+          mv DevOps.pdf Amogh_Tambad_Resume.pdf
+        
       - name: Commit and Push PDF
         run: |
           git pull
@@ -38,9 +42,6 @@ jobs:
           git commit -m "Compiled PDF on $(date -d "$M" '+%m')/$(date -d "$D" '+%d')/$(date -d "$Y" '+%Y') - $(date +%s)"
           git push
 
-      - name: Rename file
-        run: |
-          mv DevOps.pdf Amogh_Tambad_Resume.pdf
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
