Checking DevOps workflow again

--- a/.github/workflows/DevOps_Converter.yml
+++ b/.github/workflows/DevOps_Converter.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - 'DevOps.tex'
+      - 'DevOps/DevOps.tex'
 
 jobs:
   build_latex:
@@ -19,7 +19,7 @@ jobs:
       - name: Compile LaTex document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: DevOps/DevOps.tex
+          root_file: DevOps.tex
 
       - name: Configure Git
         run: |
