--- a/.github/workflows/DevOps_Converter.yml
+++ b/.github/workflows/DevOps_Converter.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Compile LaTex document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: DevOps.tex
+          root_file: DevOps/DevOps.tex
 
       - name: Configure Git
         run: |
@@ -37,7 +37,7 @@ jobs:
       - name: Commit and Push PDF
         run: |
           git pull
-          git add DevOps.pdf
+          git add Amogh_Tambad_Resume.pdf
           git diff --quiet && echo "No changes to commit" && exit 0
           git commit -m "Compiled PDF on $(date -d "$M" '+%m')/$(date -d "$D" '+%d')/$(date -d "$Y" '+%Y') - $(date +%s)"
           git push
