--- a/.github/workflows/DevOps_Converter.yml
+++ b/.github/workflows/DevOps_Converter.yml
@@ -32,9 +32,8 @@ jobs:
       
       - name: Rename file
         run: |
-          ls -lrth
-          pwd
-          mv DevOps.pdf Amogh_Tambad_Resume.pdf
+          ls ../
+          mv ../DevOps.pdf Amogh_Tambad_Resume.pdf
         
       - name: Commit and Push PDF
         run: |
