--- a/.github/workflows/SDE_Converter.yml
+++ b/.github/workflows/SDE_Converter.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: SDE
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
@@ -23,6 +26,10 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
+      - name: Checkout main branch explicitly
+        run: |
+          git checkout main
+
       - name: Rename file
         run: |
           mv ../SDE.pdf Amogh_Tambad_Resume.pdf
@@ -30,7 +37,7 @@ jobs:
       - name: Commit and Push PDF
         run: |
           git pull
-          git add SDE/Amogh_Tambad_Resume.pdf
+          git add Amogh_Tambad_Resume.pdf
           git diff --quiet && echo "No changes to commit" && exit 0
           git commit -m "Compiled PDF on $(date -d "$M" '+%m')/$(date -d "$D" '+%d')/$(date -d "$Y" '+%Y') - $(date +%s)"
           git push
